--- a/resume.html
+++ b/resume.html
@@ -172,7 +172,7 @@
                 <div class="skill-item"><p class="skill-sub">云计算相关：</p>
                     <p>熟悉AWS, Ali Cloud,HIC(HSBC Internal Cloud),OpenStack， 对GCP有一定了解</p>
                     <p>熟悉云计算设计理念思想</p>
-                    <p>熟练使用AWS，熟悉AWS 常用服务，有一定Terraform基础，熟悉AWS监控以及部分审计</p>
+                    <p>熟练使用AWS，熟悉AWS 常用服务,AWS cli，有一定Terraform基础，熟悉AWS监控以及部分审计</p>
                     <p>熟悉K8s(EKS),ECS，ECR, 熟练使用docker 自定义中间件，制作应用image及扫描</p>
                 </div>
                 
